<resources>
    <!--Commun-->
    <string name="app_name">Running Stats</string>
    <string-array name="dist_sprint">
        <item>60</item>
        <item>100</item>
        <item>200</item>
        <item>400</item>
    </string-array>
    <string name="speed_unit">m/s</string>
    <string name="length_unit">m</string>
    <string name="time_unit">s</string>
    <!-- Labels -->
    <string name="label_new_entry">Ajouter une entrée</string>
    <string name="label_histo">Historique de vos performances</string>
    <string name="label_stats">Statitiques détaillées</string>
    <string name="label_settings">Paramètres de RunningStats</string>
    <!-- Menu -->
    <string name="menu_option">Menu</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_new_entry">Ajouter une entrée</string>
    <string name="menu_histo">Historique de vos performances</string>
    <string name="menu_stats">Statitiques détaillées</string>
    <string name="menu_settings">Paramètres de RunningStats</string>
    <!-- Activité Accueil -->
    <string name="titre">Bienvenue sur RunningStats</string>
    <string name="todo">Ajoutez des entrées de vos performances</string>
    <string name="last_run">Dernière course : </string>
    <string name="add_entry">Ajouter Entrée</string>
    <string name="see_histo">Voir historique</string>
    <!-- Activité Ajout -->
    <string name="new_entry">Nouvelle entrée</string>
    <string name="date_entry">Date : </string>
    <string name="hour_entry"> Heure : </string>
    <string name="name_entry"> Nom : </string>
    <string name="distance_entry"> Distance : </string>
    <string name="time_entry">Temps : </string>
    <string name="ranking_entry">Classement : </string>
    <string name="save">Enregister</string>
    <string name="length_entry">Distance :</string>
    <string name="type">Type : </string>
    <string name="competition">Compétition</string>
    <string name="training">Entrainement</string>
    <string name="button_add_entry">Ajouter une autre entrée</string>
    <string name="add_ok">Entrée ajoutée avec succès</string>
    <string name="add_ko">Erreur lors de l\'ajout</string>
    <string name="add_comp">Entrez un temps</string>
    <string name="add_all">Vous devez renseigner tous les champs</string>
    <string name="add_neg">Le temps ne peut être négatif</string>
    <!-- Activité Historique -->
    <string name="historique">Historique</string>
    <string name="distance">Dist</string>
    <string name="compet">Compet</string>
    <string name="tps">Tps</string>
    <string name="date">Date</string>
    <string name="classement">Class</string>
    <!-- Activité Graphique -->
    <string name="graph">Graphique</string>
    <string name="graph_tmps">Durée de sprint (en %1$s)</string>
    <string name="graph_moy">Vitesse moyenne (en %1$s)</string>
    <string name="no_data_text">Aucune valeur trouvée</string>
    <!-- Activité Stats -->
    <string name="stats">Statistiques</string>
    <string name="distance_total">Distance totale : </string>
    <string name="time_total">Durée totale : </string>
    <string name="avg_speed">Vitesse moyenne : </string>
    <string name="best_time">Meilleur temps : </string>
    <string name="date_pref">Le : </string>
    <string name="worst_time">Moins bon temps : </string>
    <!-- Activité Paramètres -->
    <string name="settings">Paramètres</string>
    <string name="export">Exporter les données</string>
    <string name="erase">Effacer les données</string>
    <string name="sure_title">Attention !</string>
    <string name="sure">La suppression des données\n est définitive.\n Voulez vous vraiment\n tout supprimer ?</string>
    <string name="yes">Oui, tout supprimer</string>
    <string name="no">Non, garder mes données</string>
    <string name="sup_ok">Les données ont bien été supprimées…</string>
    <string name="export_fail">Hélas pour vous, votre export a échoué</string>
    <string name="export_success">Export réussi</string>
</resources>
