<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/menu_option"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="ifRoom|withText">
        <menu>

            <item
                android:id="@+id/menu_accueil"
                android:title="@string/menu_home"
                />
            <item
                android:id="@+id/menu_enregistrer"
                android:title="@string/menu_new_entry"
                />
            <item
                android:id="@+id/menu_historique"
                android:title="@string/menu_histo"/>
            <item
                android:id="@+id/menu_statistiques"
                android:title="@string/menu_stats"
                />
            <item
                android:id="@+id/menu_parametres"
                android:title="@string/menu_settings"
                />

        </menu>
    </item>



</menu>