<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/commun"
    >
        <TextView
            style="@style/commun.titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historique"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
          >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_weight="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tps"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compet"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classement"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
        </LinearLayout>
                <ListView
                    android:id="@+id/lv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </ListView>
                <Button
                    android:id="@+id/gotoGraphique"
                    style="@style/button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/graph"
                    android:onClick="gotoGraphique"/>
        </LinearLayout>