<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/commun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titre"
        style="@style/commun.titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_run" />

    <TextView
        android:id="@+id/last_run"
        style="@style/commun.accueil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="100m / 11s" />

    <TextView
        android:id="@+id/date"
        style="@style/commun.accueil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Entrainement du 18/04/2017"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:layout_weight="1"
        android:src="@drawable/jogger2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            style="@style/button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="gotoAjout"
            android:text="@string/add_entry" />

        <Button
            style="@style/button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="gotoHistorique"
            android:text="@string/see_histo" />
    </LinearLayout>
</LinearLayout>