<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/commun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/commun.titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_entry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_entry"
        style="@style/commun"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<!--
        <TextView
            style="@style/commun"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_entry" />-->

        <DatePicker
            android:id="@+id/date_entry"
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:layout_weight="3"
            android:datePickerMode="spinner"
            android:spinnersShown="true"
            android:calendarViewShown="false"/>

        <TimePicker
            android:id="@+id/hour_entry"
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:layout_weight="2"
            android:timePickerMode="spinner" />


    </LinearLayout>
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/commun"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_entry" />

        <TimePicker
            android:id="@+id/hour_entry"
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:layout_weight="1" />

    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/commun"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_entry" />

        <EditText
            android:id="@+id/time_entry"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>